--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -17,7 +17,7 @@ body {
 .img-product {
     width: 550px;
     height: 450px;
-    background-image: url('/images/image-product-desktop.jpg');
+    background-image: url('../images/image-product-desktop.jpg');
     background-size: cover;
 }
 
