--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,800&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,800&family=Montserrat:wght@500;700&display=swap');
 
 html, body {
     margin: 0;
@@ -16,11 +16,31 @@ body {
 /* Font */
 h1{
     font-family: 'Fraunces', serif;
+    line-height: 33px;
 }
+
+h5{
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 500;
+    letter-spacing: 5px;
+}
+
+.text-description {
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 500;
+    /* Work on the line height  10/1/2023 */
+}
+
 
 /* Styling */
 h1{
     margin: 0;
+    padding: 0;
+}
+
+h5{
+    color: hsl(228, 12%, 48%);
+    padding-top: 15px;
 }
 
 .container {
@@ -28,6 +48,11 @@ h1{
     display:flex;
     margin: 175px 420px;    
     /* background-color: hsl(0, 0%, 100%); */
+}
+
+.text-description {
+    color: hsl(228, 12%, 48%);
+    
 }
 
 .img-product {
