--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -2,20 +2,93 @@
 @import url('https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,800&family=Montserrat:wght@500;700&display=swap');
 
 html, body {
-    margin: 0;
+    margin: 0 auto;
 }
 
 body {
     width: 1440px;
-    margin: 0 auto;
-    
+    /* margin: 0 auto;     */
+    background-color: hsl(30, 38%, 92%);
 }
 
 /* Font */
+h1{
+    font-family: 'Fraunces', serif;
+    line-height: 33px;
+}
+h5{
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 100;
+    letter-spacing: 5px;
+}
+.text-description {
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 500;
+    line-height: 23px;
+    font-size: 14px;
+}
+.pricing h3 {
+    margin: 0;
+    font-size: 30px;
+}
+.pricing span { 
+    font-family: 'Montserrat', sans-serif;
+    font-size: 14px;
+}
+.order-product button {
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 700;
+    letter-spacing: 1px;
+}
 
 
 /* Styling */
 
+
+.img-product {
+    max-width: 300px;
+    margin: 0;
+    border-top-left-radius: 8px;
+    border-bottom-left-radius: 8px;
+}
+
+section {
+    border-top-right-radius: 8px;
+    border-bottom-right-radius: 8px;
+}
+
+
+main {
+    /* max-width: 720px; */
+    /* border: 1px solid red; */
+    margin-top: 80px;
+    display: flex;
+    justify-content: center;
+    flex: 1;    
+    
+}
+section {    
+    padding-left: 25px;
+    padding-right: 45px;
+    background-color: aliceblue;
+}
+
+section h5 h1 {
+    margin: 0;
+}
+
+
+section h1 { 
+    /* border: 1px solid blue; */
+    max-width: 200px;
+    
+}
+
+section p { 
+    /* border: 1px solid blue; */
+    /* max-width: 190px; */
+    
+}
 
 /* 
     9/30/2023
