--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -86,7 +86,6 @@ section h1 {
 }
 
 .pricing {
-    margin
     display: flex;
     align-items: center;
     gap: 0 15px;
@@ -106,7 +105,10 @@ section h1 {
     margin-top: 40px;
     border-radius: 8px;
     padding: 15px 60px;
+}
 
+.order-product button:hover {
+    background-color: hsl(158, 61%, 15%) ;
 }
 
 
